--- a/source/scss/_blocks/blog-list.scss
+++ b/source/scss/_blocks/blog-list.scss
@@ -33,6 +33,7 @@
         line-height: 31px;
         color: #1E0606;
         margin-top: 7px;
+        transition: 0.4s;
         @media (max-width: 779px) {
             margin-top: 5px;
         }
