--- a/source/scss/_blocks/footer.scss
+++ b/source/scss/_blocks/footer.scss
@@ -64,6 +64,7 @@
   font-size: 16px;
   line-height: 22px;
   color: #FFFFFF;
+  transition: 0.4s;
 }
 
 .footer__link:hover {
@@ -150,6 +151,7 @@
   width: 299px;
   border: none;
   background-color: #666666;
+  transition: 0.4s;
   @media (max-width: $media-tablet) {
     max-width: 121px;
   }
@@ -191,6 +193,7 @@
   height: 30px;    
   border-radius: 15px;
   background-color: #666666;
+  transition: 0.4s;
 }
 
 .footer__media-icons__link:hover {
@@ -228,6 +231,7 @@
   margin-right: 150px;
   height: 16px;
   padding-top: 5px;
+  transition: 0.4s;
   @media (max-width: $media-tablet) {
     margin-bottom: 15px;
   }
@@ -258,6 +262,7 @@
   line-height: 22px;
   color: #A2A2A2;
   padding-left: 109px;
+  transition: 0.4s;
   @media (max-width: $media-tablet) {
     padding-left: 43px;
   }
@@ -281,6 +286,7 @@
   position: absolute;
   display: none;
   margin: 0;
+  transition: 0.4s;
 }
 
 .label-rating {  
