--- a/source/scss/_blocks/pagination.scss
+++ b/source/scss/_blocks/pagination.scss
@@ -19,6 +19,7 @@
         line-height: 20px;
         text-transform: uppercase;
         color: #1E0606;
+        transition: 0.4s;
         @media (max-width: $media-mobile) {
             font-size: 14px;
             line-height: 17px;
@@ -46,12 +47,14 @@
     }
 }
 
-path:hover {
-    stroke: #C29974;
-    stroke-opacity: 1;
-}
-  
-path:active {
-    stroke: #C29974;
-    stroke-opacity: 0.7;
+.path {
+    transition: 0.4s;
+    &:hover {
+        stroke: #C29974;
+        stroke-opacity: 1;
+    }
+    &:active {
+        stroke: #C29974;
+        stroke-opacity: 0.7;
+    }
 }
