--- a/source/scss/_blocks/product-list.scss
+++ b/source/scss/_blocks/product-list.scss
@@ -129,6 +129,7 @@
   text-transform: uppercase;
   color: #FFFFFF;
   text-shadow: 0px 0px 40px rgba(147, 3, 3, 0.25);
+  transition: 0.4s;
   @media (max-width: $media-tablet) {
     font-size: 24px;
     line-height: 29px;
@@ -236,6 +237,7 @@
   text-transform: uppercase;
   color: #FFFFFF;
   text-shadow: 0px 0px 40px rgba(147, 3, 3, 0.25);
+  transition: 0.4s;
   @media (max-width: $media-tablet) {
     font-size: 26px;
     line-height: 32px;
