--- a/source/scss/_blocks/toys-list.scss
+++ b/source/scss/_blocks/toys-list.scss
@@ -22,6 +22,7 @@
     width: 54.5%;
     height: 41.5%;
     opacity: 0;
+    transition: 0.4s;
     @media (max-width: $media-tablet) {
         font-size: 22px;
         line-height: 25px;
