--- a/source/scss/fonts.scss
+++ b/source/scss/fonts.scss
@@ -4,6 +4,7 @@
         url('../fonts/Montserrat-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 
@@ -13,6 +14,7 @@
         url('../fonts/Montserrat-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -21,6 +23,7 @@
          url('../fonts/crimsontext-italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: italic;
+    font-display: swap;
 
 }
 @font-face {
@@ -29,6 +32,7 @@
         url('../fonts/OpenSans-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -37,4 +41,22 @@
         url('../fonts/OpenSans-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+	font-family: 'Lato';
+    src: url('../fonts/Lato-Regular.woff2') format('woff2'), 
+        url('../fonts/Lato-Regular.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+    font-display: swap;
+}
+@font-face {
+	font-family: 'Lato';
+    src: url('../fonts/Lato-Bold.woff2') format('woff2'), 
+        url('../fonts/Lato-Bold.woff') format('woff');
+	font-weight: bold;
+	font-style: normal;
+    font-display: swap;
 }
