--- a/source/scss/toys.scss
+++ b/source/scss/toys.scss
@@ -198,6 +198,7 @@
             line-height: 22px;
             color: #1E0606;
             margin-left: 29px;
+            transition: 0.4s;
             @media (max-width: 450px) {
                 font-size: 14px;
                 line-height: 19px;
@@ -289,6 +290,7 @@
             line-height: 22px;
             color: #1E0606;
             margin-left: 29px;
+            transition: 0.4s;
             @media (max-width: 450px) {
                 font-size: 14px;
                 line-height: 19px;
@@ -361,6 +363,7 @@
             position: absolute;
             opacity: 0;
             margin: 0;
+            transition: 0.4s;
             &:checked +.filter__amount__value {
                 background-color: #F3D0DB;
                 width: 80px;
