--- a/source/scss/_mixins.scss
+++ b/source/scss/_mixins.scss
@@ -20,3 +20,59 @@
     display: table;
   }
 }
+
+// FONTS 
+
+@mixin lato-bold {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+}
+
+@mixin lato-regular {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+
+@mixin montserrat-bold {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+}
+
+@mixin montserrat-SemiBold {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+}
+
+@mixin montserrat-regular {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+
+@mixin open-sans-bold {
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+}
+
+@mixin open-sans-regular {
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+
+@mixin open-sans-400 {
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
+@mixin crimson-text-italic {
+  font-family: 'Crimson Text', sans-serif;
+  font-style: italic;
+  font-weight: 400;
+}
