--- a/source/scss/_variables.base.scss
+++ b/source/scss/_variables.base.scss
@@ -11,6 +11,10 @@ $font-mono-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "
   Themes fonts
 */
 $font-base-family: $font-serif-family;
+$crimson-text: 'Crimson Text', sans-serif;
+$montserrat: 'Montserrat', sans-serif;
+$open-sans: 'Open Sans', sans-serif;
+$lato: 'Lato', sans-serif;
 
 /*
 * Breakpoints
