--- a/source/scss/catalog.scss
+++ b/source/scss/catalog.scss
@@ -10,9 +10,7 @@
     margin-bottom: 30px;
   }
   &__title {
-    font-family: 'Montserrat', sant-serif;
-    font-style: normal;
-    font-weight: 700;
+    @include montserrat-bold;
     color: #1E0606; 
     font-size: 40px;
     line-height: 49px;
@@ -61,9 +59,7 @@
     margin-bottom: 50px;
   }
   &__title {
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 700;
+    @include montserrat-bold;
     color: #1E0606; 
     font-size: 38px;
     line-height: 46px;
@@ -80,9 +76,7 @@
     }
   }
   &__text {
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400;
+    @include open-sans-400;
     font-size: 16px;
     line-height: 22px;
     color: #1E0606;
