--- a/source/scss/grid.scss
+++ b/source/scss/grid.scss
@@ -22,9 +22,7 @@
         }
     }
     &__title {
-        font-family: 'Montserrat', sans-serif;
-        font-style: normal;
-        font-weight: 700;
+        @include montserrat-bold;
         font-size: 40px;
         line-height: 49px;
         text-transform: uppercase;
@@ -46,7 +44,7 @@
         align-items: center;
     }
     &__box1 {
-        background: #FFFFFF;
+        background: $color-bg;
         grid-column: 1/3;
         grid-row: 1/3;
         padding: 0 80px;
@@ -73,18 +71,14 @@
             }
         }
         &__name {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 12px;
             line-height: 14px;
             color: #BCBCBE;
             margin-bottom: 12px;
         }
         &__text {
-            font-family: 'Lato', sans-serif;
-            font-style: normal;
-            font-weight: 500;
+            @include lato-regular;
             font-size: 22px;
             line-height: 26px;
             color: #2C3036;
@@ -96,9 +90,7 @@
             }
         }
         &__link {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 500;
+            @include lato-regular;
             font-size: 14px;
             line-height: 17px;
             color: #BCBCBE;
@@ -130,9 +122,7 @@
             align-items: flex-start;
         }
         &__link {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 12px;
             line-height: 14px;
             color: #BCBCBE;
@@ -143,9 +133,7 @@
             }
         }
         &__text {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 48px;
             line-height: 58px;
             text-align: center;
@@ -161,9 +149,7 @@
             }
         }
         &__link2 {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 500;
+            @include lato-regular;
             font-size: 14px;
             line-height: 17px;
             text-decoration-line: underline;
@@ -188,9 +174,7 @@
             grid-row: 3/4;
         }
         &__text {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 22px;
             line-height: 26px;
             text-align: center;
@@ -202,9 +186,7 @@
             padding-left: 4px;
         }
         &__link {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 12px;
             line-height: 14px;
             color: #FFC80A;
@@ -212,7 +194,7 @@
         }
     }
     &__box4 {
-        background: #FFFFFF;
+        background: $color-bg;
         grid-column: 2/4;
         grid-row: 3/5;
         display: flex;
@@ -241,9 +223,7 @@
             }
         }
         &__text {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 12px;
             line-height: 14px;
             color: #BCBCBE;
@@ -251,9 +231,7 @@
             padding-right: 76px;
         }
         &__text2 {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 500;
+            @include lato-regular;
             font-size: 22px;
             line-height: 26px;
             color: #2C3036;
@@ -278,18 +256,14 @@
             }   
         }
         &__text3 {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 500;
+            @include lato-regular;
             font-size: 14px;
             line-height: 17px;
             color: #BCBCBE;
             padding-bottom: 20px;
         }
         &__link {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 12px;
             line-height: 14px;
             color: #2198F4;
@@ -329,30 +303,24 @@
             margin-bottom: 20px;
         }
         &__name {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 32px;
             line-height: 38px;
             text-align: center;
-            color: #FFFFFF;
+            color: $color-bg;
             padding-bottom: 10px;
         }
         &__text {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 500;
+            @include lato-regular;
             font-size: 14px;
             line-height: 17px;
             text-align: center;
-            color: #FFFFFF;
+            color: $color-bg;
             padding-bottom: 30px;
             max-width: 230px;
         }
         &__button {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 12px;
             line-height: 14px;
             color: #2C3036;
@@ -380,13 +348,11 @@
             grid-row: 6/7;
         }
         &__text {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 8px;
             line-height: 10px;
             text-align: center;
-            color: #FFFFFF;
+            color: $color-bg;
             background: #FA684F;
             border-radius: 3px;
             border: none;
@@ -404,13 +370,11 @@
             } 
         }
         &__name {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 22px;
             line-height: 26px;
             text-align: center;
-            color: #FFFFFF;
+            color: $color-bg;
             margin-bottom: 31px;
             max-width: 200px;
             @media (max-width: $media-tablet) {
@@ -449,9 +413,7 @@
             margin-bottom: 10px;
         }
         &__name {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 500;
+            @include lato-regular;
             font-size: 22px;
             line-height: 26px;
             text-align: center;
@@ -459,9 +421,7 @@
             margin-bottom: 20px;
         }
         &__link {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 12px;
             line-height: 14px;
             color: #2198F4;
@@ -485,9 +445,7 @@
             margin-bottom: 15px;
         }
         &__text {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
+            @include lato-bold;
             font-size: 22px;
             line-height: 26px;
             text-align: center;
@@ -512,12 +470,10 @@
             padding-bottom: 30px;
         }
         &__text {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 500;
+            @include lato-regular;
             font-size: 22px;
             line-height: 26px;
-            color: #FFFFFF;
+            color: $color-bg;
             max-width: 189px;
             margin-right: 106px;
             @media (max-width: $media-mobile) {
