--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -69,9 +69,7 @@
   }
   &__text {
     background-color: #C29974;
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 700;
+    @include open-sans-bold;
     font-size: 12px;
     line-height: 16px;
     color: #FFFFFF;
@@ -192,9 +190,7 @@
       padding-top: 80px;
     }
     &__title {
-      font-family: 'Montserrat', sans-serif;
-      font-style: normal;
-      font-weight: 700;
+      @include montserrat-bold;
       color: #1E0606; 
       font-size: 40px;
       line-height: 110%;
@@ -206,9 +202,7 @@
       }
     }
     &__subtitle {
-      font-family: 'Crimson Text', sans-serif;
-      font-style: italic;
-      font-weight: 400;
+      @include crimson-text-italic;
       font-size: 20px;
       line-height: 26px;
       padding-bottom: 20px;
@@ -228,9 +222,7 @@
 .products {
   overflow: hidden;
   &__title {
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 700;
+    @include montserrat-bold;
     color: #1E0606; 
     font-size: 38px;
     line-height: 46px;
@@ -291,9 +283,7 @@
     }
   }
   &__text {
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400;
+    @include open-sans-400;
     font-size: 16px;
     line-height: 22px;
     color: #1E0606;
@@ -348,9 +338,7 @@
       }
   }
   &__title {
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 700;
+    @include montserrat-bold;
     color: #1E0606; 
     font-size: 38px;
     line-height: 46px;
@@ -397,9 +385,7 @@
     }
   }
   &__link {
-    font-family: 'Crimson Text', sans-serif;
-    font-style: italic;
-    font-weight: 400;
+    @include crimson-text-italic;
     font-size: 26px;
     line-height: 34px;
     color: #1E0606;
@@ -418,9 +404,7 @@
     }
   }
   &__work {
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400;
+    @include open-sans-400;
     font-size: 16px;
     line-height: 22px;
     color: #1E0606;
@@ -432,9 +416,7 @@
     }
   }
   &__thank {
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400;
+    @include open-sans-400;
     font-size: 16px;
     line-height: 22px;
     color: #1E0606;
@@ -494,9 +476,7 @@
       margin-right: 0px;
     }
     &__title {
-      font-family: 'Montserrat', sans-serif;
-      font-style: normal;
-      font-weight: 700;
+      @include montserrat-bold;
       color: #1E0606;
       font-size: 38px;
       line-height: 46px;
@@ -517,9 +497,7 @@
       }
     }
     &__subtitle {
-      font-family: 'Crimson Text', sans-serif;
-      font-style: italic;
-      font-weight: 400;
+      @include crimson-text-italic;
       font-size: 26px;
       line-height: 34px;
       color: #1E0606;
@@ -530,9 +508,7 @@
       }
     }
     &__text {
-      font-family: 'Open Sans', sans-serif;
-      font-style: normal;
-      font-weight: 400;
+      @include open-sans-400;
       font-size: 16px;
       line-height: 22px;
       color: #1E0606;
@@ -569,9 +545,7 @@
       height: auto;
     }
     &__title {
-      font-family: 'Montserrat', sans-serif;
-      font-style: normal;
-      font-weight: 700;
+      @include montserrat-bold;
       color: #1E0606; 
       font-size: 38px;
       line-height: 46px;
@@ -592,9 +566,7 @@
       }
     }
     &__text {
-      font-family: 'Open Sans', sans-serif;
-      font-style: normal;
-      font-weight: 400;
+      @include open-sans-400;
       font-size: 16px;
       line-height: 22px;
       color: #1E0606;
