--- a/source/scss/svg.scss
+++ b/source/scss/svg.scss
@@ -2,9 +2,7 @@
     margin-top: 60px;
     margin-bottom: 47px;
     &__title {
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
+        @include montserrat-bold;
         font-size: 36px;
         line-height: 44px;
         text-transform: uppercase;
