--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -43,21 +43,22 @@
         <div class="header__burger__nav">
           <a href="/" class="header__link header__change">
             <img src="./img/icon/Logo.svg" alt="logo" class="header__logo"></a>
-            <button class="header__burger__close header__change"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M0.707105 0L0 0.707105L7.07111 7.77821L4.6869e-05 14.8493L0.707151 15.5564L7.77821 8.48532L14.8492 15.5563L15.5563 14.8492L8.48532 7.77821L15.5563 0.707178L14.8492 7.33696e-05L7.77821 7.07111L0.707105 0Z" fill="#1E0606"/>
-              </svg></button>
-            <a class="header__change" href="#"><img class="header__icon" src="./img/icon/search.svg" alt="search" width="17" height="17"></a>
+          <button class="header__burger__close header__change">
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M0.707105 0L0 0.707105L7.07111 7.77821L4.6869e-05 14.8493L0.707151 15.5564L7.77821 8.48532L14.8492 15.5563L15.5563 14.8492L8.48532 7.77821L15.5563 0.707178L14.8492 7.33696e-05L7.77821 7.07111L0.707105 0Z" fill="#1E0606"/></svg>
+          </button>
+          <a class="header__change" href="#"><img class="header__icon" src="./img/icon/search.svg" alt="search" width="17" height="17"></a>
         </div>
           <ul class="header__burger__list">
-            <li><a class="header__burger__list-item header__change" href="catalog.html">Catalog</a></li>
-            <li><a class="header__burger__list-item header__change" class="header__burger-list" href="#">About US</a></li>
-            <li><a class="header__burger__list-item header__change" href="blog.html">Blog</a></li>
-            <li><a class="header__burger__list-item header__change" href="animation.html">Animation</a></li>
-            <li><a class="header__burger__list-item header__change" href="svg.html">SVG</a></li>
-            <li><a class="header__burger__list-item header__change" href="bootstrap.html">Bootstrap</a></li>
-            <li><a class="header__burger__list-item header__change" href="grid.html">Grid</a></li>
+            <li><a class="header__burger__link header__change" href="catalog.html">Catalog</a></li>
+            <li><a class="header__burger__link header__change" href="#">About US</a></li>
+            <li><a class="header__burger__link header__change" href="blog.html">Blog</a></li>
+            <li><a class="header__burger__link header__change" href="animation.html">Animation</a></li>
+            <li><a class="header__burger__link header__change" href="svg.html">SVG</a></li>
+            <li><a class="header__burger__link header__change" href="bootstrap.html">Bootstrap</a></li>
+            <li><a class="header__burger__link header__change" href="grid.html">Grid</a></li>
+            <li class="header__burger__list-item"><a class="header__burger__link header__burger__list-contact header__change" href="contact.html">Contact US</a></li>
           </ul>
-          <a class="header__burger__list-item header__burger__list-contact header__change" href="contact.html">Contact US</a>
       </div>
     </div>
 </header>
