--- a/source/scss/_blocks/header.scss
+++ b/source/scss/_blocks/header.scss
@@ -125,6 +125,9 @@
           padding: 25px 0;
         }
         &__list-item {
+          margin-top: 15px;
+        }
+        &__link {
           font-family: 'Open Sans';
           font-style: normal;
           font-weight: 400;
